# nested_ragged_tensors

./: .gitignore  .mkdocs.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: benchmark.yaml  code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
benchmark/: README.md  benchmarkable_dataset.py  nrt_dataset.py  run.py  run_micro.py  test_micro.py
dev/bench/: data.js
performance_tests/: dense_dataset.py  direct_dataset.py  named_safetensors_dataset.py  nrt_dataset.py  test_times.py  utils.py
performance_tests/configs/: config.yaml
performance_tests/configs/dataset_spec/: default.yaml  mimic.yaml  sample.yaml
sample_dataset/: dataset.pkl
sample_dataset_builder/: README.md  pyproject.toml
sample_dataset_builder/src/sample_dataset_builder/: __init__.py  __main__.py  dataset_generator.py
sample_dataset_builder/src/sample_dataset_builder/configs/: generate_dataset.yaml
sample_dataset_builder/src/sample_dataset_builder/configs/dataset_spec/: default.yaml  mimic.yaml  sample.yaml
src/nested_ragged_tensors/: __init__.py  joint_nested_ragged_tensor.py  numpy.py  ragged_base.py  ragged_numpy.py  ragged_tensors.py  utils.py
tests/: test_disk_archive_reuse.py  test_ragged_numpy.py
