[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nested_ragged_tensors"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Utilities for efficiently working with, saving, and loading, collections of connected nested ragged tensors in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["safetensors", "numpy"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov"]
benchmarks = ["ml-mixins", "torch", "rootutils", "memray"]

[project.urls]
Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
Issues = "https://github.com/mmcdermott/nested_ragged_tensors/issues"
