[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nested_ragged_tensors"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Utilities for efficiently working with, saving, and loading, collections of connected nested ragged tensors in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["safetensors", "numpy"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov"]
benchmarks = ["ml-mixins", "torch", "rootutils", "memray"]
docs = [
  "mkdocs==1.6.0", "mkdocs-material==9.5.31", "mkdocstrings[python,shell]==0.25.2", "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.1", "mkdocs-section-index==0.3.9", "mkdocs-git-authors-plugin==0.9.0",
  "mkdocs-git-revision-date-localized-plugin==1.2.6"
]

[project.urls]
Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
Issues = "https://github.com/mmcdermott/nested_ragged_tensors/issues"
