[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nested_ragged_tensors"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Utilities for efficiently working with, saving, and loading, collections of connected nested ragged tensors in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["safetensors>=0.3.1", "numpy>=1.21"]

[dependency-groups]
dev = ["pre-commit<4", "ruff", "pytest", "pytest-cov"]
benchmarks = ["ml-mixins", "torch", "rootutils", "memray"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
# Default flags applied to every doctest. NORMALIZE_WHITESPACE lets expected-output
# lines wrap naturally; ELLIPSIS lets `...` stand in for variable paths / numbers.
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.1", "mkdocs-material>=9.5.31", "mkdocstrings[python]>=0.26", "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6.1", "mkdocs-section-index>=0.3.9", "mkdocs-git-authors-plugin>=0.9",
  "mkdocs-git-revision-date-localized-plugin>=1.2.6"
]

[project.urls]
Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
Issues = "https://github.com/mmcdermott/nested_ragged_tensors/issues"
